--- a/slehome/templates/create.html
+++ b/slehome/templates/create.html
@@ -1,9 +1,15 @@
-<html>
-	<head>
-		<title>{{page_name}} - Create </title>
-	</head>
-	<body>
-		<h1>{{page_name}}</h1>
-		This page does not exist. <a href ="/sle/wiki/{{page_name}}/edit/">Create?</a>
-	</body>
-</html>
+{% extends "wiki_base.html" %}
+{% block title %}
+
+{{page_name}} - Create
+
+{% endblock %}
+
+
+{% block content %}
+
+<h1>{{page_name}}</h1>
+
+This page does not exist. <a href ="/sle/wiki/{{page_name}}/edit/">Create?</a>
+
+{% endblock %}
