--- a/slehome/templates/edit.html
+++ b/slehome/templates/edit.html
@@ -1,13 +1,17 @@
-<html>
-	<head>
-		<title>{{page_name}} - Editing</title>
-	</head>
-	<body>
-		<h1>Editing {{page_name}}</h1>
-		<form method="post" action="/sle/wiki/{{page_name}}/save/">{% csrf_token %}
-			<textarea name="content" rows="20" cols="60">{{content}}</textarea>
-			<br/>
-			<input type="submit" value="Save Page"/>
+{% extends "wiki_base.html" %}
+{% block title %}
 
-	</body>
-</html>
+{{page_name}} - Editing
+
+{% endblock %}
+
+
+{% block content %}
+<h1>Editing {{page_name}}</h1>
+
+<form method="post" action="/sle/wiki/{{page_name}}/save/">{% csrf_token %}
+	<textarea name="content" rows="20" cols="60">{{content}}</textarea>
+	<br/>
+	<input type="submit" value="Save Page"/>
+</form>
+{% endblock %}
