다운로드시 한글 파일명 깨지는 문제 해결

--- a/slehome/templates/alert.html
+++ b/slehome/templates/alert.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
 	window.alert("{{alert}}");
-	history.back();
+	location.replace("{{location}}"); 
 </script>
 
 
