--- a/slehome/templates/view.html
+++ b/slehome/templates/view.html
@@ -16,6 +16,8 @@
 
 			{% if is_history == False %}
 				<a href="/sle/wiki/{{page_name}}/edit/">Edit this page?</a>
+				<br/>
+				<a href="/sle/wiki/{{page_name}}/history/">#history</a>
 			{% endif %}
 		</div>
 		<hr />
@@ -23,6 +25,7 @@
 			{% for file_data in file_list %}
 			<p>
 				<a href='/sle/wiki/{{page_name}}/download/{{file_data.count}}/'>{{file_data.file_name}}</a>
+				<a href='/sle/wiki/{{page_name}}/delete/{{file_data.count}}/'>삭제</a>
 			</p>
 		{% endfor %}
 		{% if is_history == False %}
