--- a/slehome/freeboards/templates/listSpecificPage.html
+++ b/slehome/freeboards/templates/listSpecificPage.html
@@ -1,27 +1,27 @@
 {% comment %}
   totalCnt: <strong>{{ totalCnt }}</strong> currentPage: <strong>{{ currentPage }}</strong> boardList: <strong>{{ boardList|length }}</strong>
 {% endcomment %}
-
 <html>
 <head>
     <link href="{{ STATIC_URL }}static/css/bootstrap.css" rel="stylesheet">
 
 </head>
 
-<table cellspacing=1 width=700 border=0>
+<table class="table" cellspacing=1 width=700 border=0>
     <tr>
-        <td>총 게시물수: {{ totalCnt }}</td>
-        <td><p align=right> 페이지:{{ currentPage }}</td>
+        <td>Total writings: {{ totalCnt }}</td>
+        <td><p align=right> Page:{{ currentPage }}</td>
     </tr>
 </table>
 
 <table class="table" cellspacing=1 width=700 border=1>
     <tr>
-        <td width=50><p align=center>번호</p></td>
-        <td width=100><p align=center>이름</p></td>
-        <td width=320><p align=center>제목</p></td>
-        <td width=100><p align=center>등록일</p></td>
-        <td width=100><p align=center>조회수</p></td>
+        <td width=50><p align=center>No.</p></td>
+        <td width=80><p align=center>Category</p></td>
+        <td width=320><p align=center>Title</p></td>
+        <td width=80><p align=center>Writer</p></td>
+        <td width=80><p align=center>Date</p></td>
+        <td width=80><p align=center>Hits</p></td>
     </tr>
 
     {% if boardList %}
@@ -29,26 +29,27 @@
             {% for boardRow in boardList %}
             <tr>
             <td width=50><p align=center>{{ boardRow.id }}</p></td>
-            <td width=100><p align=center>{{ boardRow.name }}</p></td>
+            <td width=80><p align=center>{{ boardRow.category }}</p></td>
             <td width=320>
                 <p align=center>
-                    <a href="/viewWork?memo_id={{ boardRow.id }}&currentPage={{ currentPage }}&searchStr=None" title="{{ boardRow.memo }}">{{ boardRow.subject }}
+                    <a href="/viewWork?wrting_id={{ boardRow.id }}&currentPage={{ currentPage }}&searchStr=None" title="{{ boardRow.contents }}">{{ boardRow.title }}
                 </p>
             </td>
-            <td width=100><p align=center>{{ boardRow.created_date }}</p></td>
-            <td width=100><p align=center>{{ boardRow.hits }}</p></td>
+            <td width=80><p align=center>{{ boardRow.user }}</p></td>
+            <td width=80><p align=center>{{ boardRow.pub_date }}</p></td>
+            <td width=80><p align=center>{{ boardRow.hits }}</p></td>
             </tr>
             {% endfor %}
         </ul>
     {% else %}
-        <p>No Data.</p>
+        <p></p>
     {% endif %}
 </table>
 
-<table cellspacing=1 width=700 border=1 >
+<table class="table" cellspacing=1 width=700 border=1 >
     <tr> <td>
         {% for page in totalPageList %}
-            <a href="/freeboards/listSpecificPageWork?currentPage={{page}}" >
+            <a href="/sle/freeboards/listSpecificPageWork?currentPage={{page}}" >
             [
             {% ifequal page currentPage %}
                 <b>
@@ -63,12 +64,12 @@
         </td> </tr>
 </table>
 
-<table width=700>
+<table class="table" width=700>
     <tr>
-        <td><input type=button value="글쓰기"  OnClick="window.location='/freeboards/showWriteForm'">    </td>
+        <td><input type=button value="Write"  OnClick="window.location='/sle/freeboards/showWriteForm'">    </td>
         <td><form name=searchf method=post action="/searchWithSubject/">
             <p align=right><input type=text name=searchStr size=50  maxlength=50>
-            <input type=submit value="글찾기"></p>
+            <input type=submit value="Search"></p>
         </td>
     </tr>
 </table>
