--- a/slehome/freeboards/templates/writeBoard.html
+++ b/slehome/freeboards/templates/writeBoard.html
@@ -1,21 +1,22 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
-	<title>게시판 글쓰기</title>
+  <link href="{{ STATIC_URL }}static/css/bootstrap.css" rel="stylesheet">
+	<title>Write on the Board</title>
 </head>
 
 <table class="table" width=700 border=1 cellspacing=0 cellpadding=5>
-  <form name="writeform" method=post action="/freeboards/doWriteBoard/">
-  	<tr><td><b>이름</b></td><td><input type="text" name="name" size=50  maxlength=50></td></tr>
-  	<tr><td><b>이메일</b></td><td><input type="text" name="email" size=50  maxlength=50></td></tr>
-  	<tr><td><b>제목</b></td><td><input type="text" name="subject" size=50  maxlength=50></td></tr>
-  	<tr><td><b>내용</b></td><td><textarea name="memo" cols=50 rows=10></textarea></td></tr>
+  <form name="writeform" method=post action="/sle/freeboards/doWriteBoard/">
+  	<tr><td><b>Name</b></td><td><input type="text" name="name" size=50  maxlength=50></td></tr>
+  	<tr><td><b>Category</b></td><td><input type="text" name="category" size=50  maxlength=50></td></tr>
+  	<tr><td><b>Title</b></td><td><input type="text" name="title" size=50  maxlength=50></td></tr>
+  	<tr><td><b>Contents</b></td><td><textarea name="contents" cols=50 rows=10></textarea></td></tr>
   </form>
 </table>
 
-<table width=700 border=1 cellspacing=0 cellpadding=0>
+<table class"table" border=1 cellspacing=0 cellpadding=0>
 <tr><td>
-  <input type="submit" value="등록" OnClick="javascript:writeCheck();">
+  <input type="submit" value="Write" OnClick="javascript:writeCheck();">
 </td></tr>
 </table>
 
@@ -30,14 +31,14 @@
               form.name.focus();
               return;
           }
-          if (!form.subject.value) {
+          if (!form.title.value) {
               alert("제목을 적어주세요");
-              form.subject.focus();
+              form.title.focus();
               return;
           }
-          if (!form.memo.value) {
+          if (!form.contents.value) {
               alert("내용을 적어주세요");
-              form.memo.focus();
+              form.contents.focus();
               return;
           }
           form.submit();
