--- a/slehome/freeboards/templates/listSpecificPage.html
+++ b/slehome/freeboards/templates/listSpecificPage.html
@@ -32,7 +32,7 @@
             <td width=80><p align=center>{{ boardRow.category }}</p></td>
             <td width=320>
                 <p align=center>
-                    <a href="/viewWork?wrting_id={{ boardRow.id }}&currentPage={{ currentPage }}&searchStr=None" title="{{ boardRow.contents }}">{{ boardRow.title }}
+                    <a href="/sle/freeboards/viewWork?writing_id={{ boardRow.id }}&currentPage={{ currentPage }}&searchStr=None" title="{{ boardRow.contents }}">{{ boardRow.title }}
                 </p>
             </td>
             <td width=80><p align=center>{{ boardRow.user }}</p></td>
