--- a/templates/freeboards/viewForUpdate.html
+++ b/templates/freeboards/viewForUpdate.html
@@ -1,9 +1,8 @@
-{% load staticfiles %}
 <html>
 
 	<head>
 		<title>Edit Writing</title>
-		<link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
+		<link href="{{ STATIC_URL }}static/css/bootstrap.css" rel="stylesheet">
 	
 
 	<script language="javascript">
