--- a/templates/freeboards/writeBoard.html
+++ b/templates/freeboards/writeBoard.html
@@ -1,8 +1,7 @@
-{% load staticfiles %}
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
-  <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
+  <link href="{{ STATIC_URL }}static/css/bootstrap.css" rel="stylesheet">
 	<title>Write on the Board</title>
 </head>
 
