--- a/templates/freeboards/listSearchedSpecificPage.html
+++ b/templates/freeboards/listSearchedSpecificPage.html
@@ -1,7 +1,6 @@
-{% load staticfiles %}
 <html>
 <head>
-  <link href="{% static "bootstrap/css/bootstrap.css" %}" rel="stylesheet">
+  <link href="{{ STATIC_URL }}static/css/bootstrap.css" rel="stylesheet">
 </head>
 
   <table class="table" cellspacing=1 width=700 border=0>
