--- a/templates/wiki/fileupload.html
+++ b/templates/wiki/fileupload.html
@@ -1,7 +1,7 @@
-{% extends "wiki_base.html" %}
+{% extends "wiki/wiki_base.html" %}
 {% block title %}
 
-{{page_name}} - Editing
+{{page_name}} - file upload
 
 {% endblock %}
 
@@ -9,7 +9,7 @@
 {% block content %}
 <h1>Editing {{page_name}}</h1>
 
-<form method="post" action="/sle/wiki/{{page_name}}/save/">{% csrf_token %}
+<form method="post" action="/sle/wiki/{{page_name}}/upload/">{% csrf_token %}
 	<textarea name="content" rows="20" cols="60">{{content}}</textarea>
 	<br/>
 	<input type="submit" value="Save Page"/>
