--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/main/">{{ title }}</a>
+      <a class="navbar-brand" href="{{ base_path }}">{{ title }}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
