--- a/templates/main/navbar_user_userinfo.html
+++ b/templates/main/navbar_user_userinfo.html
@@ -3,6 +3,6 @@
 {% else %}
 	<li><a href="#"> You haven't been approved yet, {{ nickname }}.</a></li>
 {% endif %}
-	<form class="navbar-form navbar-left" role="form" method="POST" action=".">{% csrf_token %}
+	<form class="navbar-form navbar-left" role="form" method="POST" action="/sle/">{% csrf_token %}
 		<button type="submit" class="btn btn-link" name="logout">Logout</button>
 	</form>
