--- a/templates/freeboards/listSearchedSpecificPage.html
+++ b/templates/freeboards/listSearchedSpecificPage.html
@@ -1,8 +1,6 @@
-<html>
-<head>
-  <link href="{{ STATIC_URL }}static/css/bootstrap.css" rel="stylesheet">
-</head>
+{% extends "freeboards/freeboards_base.html" %}
 
+{% block content %}
   <table class="table" cellspacing=1 width=700 border=0>
       <tr>
           <td>Total writings: {{ totalCnt }}</td>
@@ -68,4 +66,4 @@
   </table>
 
 
-</html>
+{% endblock %}
