--- a/templates/main/navbar_menu.html
+++ b/templates/main/navbar_menu.html
@@ -1,11 +1,21 @@
 {% if user.is_active %}
   {% for menu in menu_list %}
   	{% if menu.display == True %}
-  		{% with "/main/"|add:menu.menu.lower as menu_path %}
+  		{% with "/sle/"|add:menu.menu.lower|add:"/" as menu_path %}
 	  		{% if current_path == menu_path %}
-	  			<li class="active"><a href="{{ base_path }}{{ menu.link }}">{{ menu }}<span class="sr-only"></span></a></li>
+	  			<li class="active"><a href="{{ base_path }}{{ menu.link }}"
+	  				{% if menu.menu.lower == "wiki" %}
+	  					target="_blank"
+	  				{% else %}
+	  				{% endif %}
+	  				>{{ menu }}<span class="sr-only"></span></a></li>
 	  		{% else %}
-	  			<li><a href="{{ base_path }}{{ menu.link }}">{{ menu }}<span class="sr-only"></span></a></li>
+	  			<li><a href="{{ base_path }}{{ menu.link }}"
+	  				{% if menu.menu.lower == "wiki" %}
+	  					target="_blank"
+	  				{% else %}
+	  				{% endif %}
+	  			>{{ menu }}<span class="sr-only"></span></a></li>
 	  		{% endif %}
 	  	{% endwith %}
 		{% endif %}
@@ -14,7 +24,7 @@
 {% else %}
   {% for menu in menu_list_for_nonmembers %}
 		{% if menu.display == True %}
-  		{% with "/main/"|add:menu.menu.lower as menu_path %}
+  		{% with "/sle/"|add:menu.menu.lower|add:"/" as menu_path %}
 	  		{% if current_path == menu_path %}
 	  			<li class="active"><a href="{{ base_path }}{{ menu.link }}">{{ menu }}<span class="sr-only"></span></a></li>
 	  		{% else %}
