--- a/templates/main/main_index.html
+++ b/templates/main/main_index.html
@@ -1,4 +1,7 @@
 {% extends "main/base.html" %}
 
 {% block content %}
+	<div style="text-align:center;">
+		<img src="{{ MEDIA_URL }}IU/6.png">
+	</div>
 {% endblock %}
