--- a/templates/freeboards/viewMemo.html
+++ b/templates/freeboards/viewMemo.html
@@ -34,6 +34,7 @@
         <tr><td><b>Category </b></td><td> {{ boardData.category }} </td></tr>
         <tr><td><b>Name </b></td><td> {{ boardData.user }} </td></tr>
         <tr><td><b>Title </b></td><td> {{ boardData.title }} </td></tr>
+        <tr><td><b>Contents </b></td><td> {{ boardData.contents }} </td></tr>
     </table>
 
     <table class="table" cellspacing = 0 cellpadding = 0 border = 0 width=500>
