--- a/templates/wiki/view.html
+++ b/templates/wiki/view.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 	
-	<div class='container'>
+	<div class='container' style="word-break: break-all;">
 		<h1>{{page_name}}</h1>
 		
 		<div>
@@ -44,6 +44,8 @@
 		<hr />	
 		<p>
 			{% autoescape off %}
+			{{context}}
+			<hr />
 			{{content}}
 			{% endautoescape %}
 		</p>
