register을 위한 account form 수정중, main url 약간 수정

--- a/templates/main/navbar_user_login.html
+++ b/templates/main/navbar_user_login.html
@@ -6,12 +6,12 @@
 
       <div class="form-group">
         <label for="user_id">User ID</label>
-        {{ form.user_id|attr:"placeholder:User ID"|attr:"class:form-control" }}
+        {{ login_form.user_id|attr:"placeholder:User ID"|attr:"class:form-control" }}
       </div>
 
       <div class="form-group">
         <label for="user_password">Password</label>
-        {{ form.user_password|attr:"placeholder:Password"|attr:"class:form-control" }}
+        {{ login_form.user_password|attr:"placeholder:Password"|attr:"class:form-control" }}
       </div>
 
       <div class="checkbox">
