위키 파일 삭제시 진짜 삭제할 건지 물어보는 기능 추가

--- a/templates/freeboards/viewForUpdate.html
+++ b/templates/freeboards/viewForUpdate.html
@@ -23,9 +23,9 @@
 	     var s = "{{searchStr}}";
 
 	        if(s=="None")
-	            location.href = '/listSpecificPageWork?currentPage={{currentPage}}';
+	            location.href = '/sle/freeboards/listSpecificPageWork?currentPage={{currentPage}}';
 	        else
-	            location.href = '/listSearchedSpecificPageWork?pageForView={{currentPage}}&searchStr={{searchStr}}';
+	            location.href = '/sle/freeboards/listSearchedSpecificPageWork?pageForView={{currentPage}}&searchStr={{searchStr}}';
 	 }
 	</script>
 
