wiki page 예외처리 해놓음

--- a/templates/wiki/history.html
+++ b/templates/wiki/history.html
@@ -11,7 +11,7 @@
 <div>	
 	{% for page_data in page %}
 		<p>
-			{{page_name}} <a href="/sle/wiki/{{page_name}}/{{page_data.count}}/">{{page_data.pub_date}}</a>
+			{{page_name}} <a href="/sle/wiki/page/{{page_name}}/{{page_data.count}}/">{{page_data.pub_date}}</a>
 		</p>
 	{% endfor %}
 </div>
