--- a/templates/wiki/create.html
+++ b/templates/wiki/create.html
@@ -10,6 +10,6 @@
 
 <h1>{{page_name}}</h1>
 
-This page does not exist. <a href ="/sle/wiki/{{page_name}}/edit/0/">Create?</a>
+This page does not exist. <a href ="/sle/wiki/edit/{{page_name}}/0/">Create?</a>
 
 {% endblock %}
