--- a/templates/wiki/fileupload.html
+++ b/templates/wiki/fileupload.html
@@ -9,7 +9,7 @@
 {% block content %}
 <h1>Editing {{page_name}}</h1>
 
-<form method="post" action="/sle/wiki/{{page_name}}/upload/">{% csrf_token %}
+<form method="post" action="/sle/wiki/upload/{{page_name}}/">{% csrf_token %}
 	<textarea name="content" rows="20" cols="60">{{content}}</textarea>
 	<br/>
 	<input type="submit" value="Save Page"/>
