--- a/templates/wiki/wiki_navbar.html
+++ b/templates/wiki/wiki_navbar.html
@@ -1,24 +1,30 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-default " role="navigation">
+    <div class="container-fluid">
+        <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href='/sle/'>슬기짜기</a> <a class="navbar-brand" href='/sle/wiki/FrontPage'>Wiki</a>
-        </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href='/sle/'>슬기짜기</a> <a class="navbar-brand" href='/sle/wiki/FrontPage'>Wiki</a>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <form method="post" class="navbar-form navbar-left" role="search" action ="/sle/wiki/search/">{% csrf_token %}
-                <div class="form-group">
-                    <input type="text" name="search_key" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">검색</button>
-            </form>
-        </div><!-- /.navbar-collapse -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <form method="post" class="navbar-form navbar-left" role="search" action ="/sle/wiki/search/">{% csrf_token %}
+                    <div class="form-group">
+                        <input type="text" name="search_key" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">검색</button>
+                </form>
+               
+                <ul class="nav navbar-nav navbar-right">
+                    {% include "main/navbar_user.html" %}
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div>
     </div>
 </nav>
