navbar와 main 분리

--- a/templates/freeboards/like.html
+++ b/templates/freeboards/like.html
@@ -6,7 +6,7 @@
   {% else %}
     style="background-color:#fffff;"
   {% endif %}>
-    <span class="glyphicon glyphicon-star" aria-hidden="true">Like</span>
+    <span class="glyphicon glyphicon-star" aria-hidden="true">Like</span> {{likeCnt}}
 </button>
 
 <script language="javascript">
