--- a/templates/navbar/base.html
+++ b/templates/navbar/base.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div id="navbar">
-    	{% include "main/navbar.html" %}
+    	{% include "navbar/navbar.html" %}
     </div>
 
     <div id="content">
