--- a/templates/wiki/wiki_navbar.html
+++ b/templates/wiki/wiki_navbar.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href='/sle/'>슬기짜기</a> <a class="navbar-brand" href='/sle/wiki/FrontPage'>Wiki</a>
+                <a class="navbar-brand" href='/sle/'>슬기짜기</a> <a class="navbar-brand" href='/sle/wiki/page/FrontPage'>Wiki</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
