--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -14,10 +14,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        {% include "main/navbar_menu.html" %}
+        {% include "navbar/navbar_menu.html" %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        {% include "main/navbar_user.html" %}
+        {% include "navbar/navbar_user.html" %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
