base.html 경로 관련 파일들 수정

--- a/templates/freeboards/freeboards_base.html
+++ b/templates/freeboards/freeboards_base.html
@@ -19,7 +19,7 @@
 	</head>
 
 	<body>
-		{% include "main/base.html" %}
+		{% include "base.html" %}
 		<br>
 		<div class="container">
 			{% block content %}
